fix slider, style scrollbar, add tabs

--- a/sass/page/item.scss
+++ b/sass/page/item.scss
@@ -173,6 +173,38 @@
                 overflow: auto;
                 font-size: 18px;
                 line-height: 32px;
+                scrollbar-width: thin;
+                scrollbar-color: #FE5A0E #E5E5E5;
+
+                /* полоса прокрутки (скроллбар) */
+                    &::-webkit-scrollbar {
+                    width: 6px;
+                    height: 8px;
+                    background-color: #E5E5E5;
+                    border-radius: 2px;
+                    }
+
+                    /* ползунок скроллбара */
+                    &::-webkit-scrollbar-thumb {
+                    background-color: #FE5A0E;
+                    border-radius: 2px;
+                    }
+
+                    &::-webkit-scrollbar-thumb:hover {
+                    background-color: #a13a0a;
+                    }
+
+                    /* Стрелки */
+
+                    &::-webkit-scrollbar-button {
+                        width: 0;
+                        height: 0;
+                    }
+
+                   & ::-webkit-scrollbar-button {
+                       width: 0;
+                       height: 0;
+                    }
             }
 
         }
@@ -207,14 +239,17 @@
             width: 32px;
             height: 32px;
 
-            background: $background-grey-5;
             border-radius: 2px;
             position: absolute;
-            bottom: 35px;
             margin: auto 0;
             @include flex(row, center, center);
             cursor: pointer;
             z-index: 3;
+        }
+            
+        .prev-pans, .next-pans {
+            background: $background-grey-5;
+            bottom: 35px;
         }
 
         .prev-btn {
@@ -335,6 +370,9 @@
                 margin-bottom: 54px;
             }
             .add-feed {
+                width: max-content;
+                margin: 0 auto;
+                display: block;
                 padding: 14px 32px;
                 border: 1px solid $border-orange;
                 background-color: $background-white;
@@ -491,6 +529,15 @@
                             margin-bottom: 20px;
                         }
                     }
+                }
+            }
+            .pension-content {
+
+                .feedback-item {
+                    flex-direction: column;
+                     .feedback-author {
+                         margin-bottom: 20px;
+                     }
                 }
             }
         }
